# video_stream_compression_filter_qt_adtf3

./: CMakeLists.txt  LICENSE  README.md  qt_image_sample_compressor.cpp  qt_image_sample_compressor.h
